--- a/_posts/2020-05-07-맥북에서 오라클 계정을 잃어버렸을 때 대처하는 방법.markdown
+++ b/_posts/2020-05-07-맥북에서 오라클 계정을 잃어버렸을 때 대처하는 방법.markdown
@@ -3,7 +3,7 @@ layout: post
 title: [스크랩] 맥북에서 docker oracle11g 실행 후 sqlplus sysdba로 접속하는 방법..!
 date: 2020-05-07 10:29:30
 description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
-img: "" # Add image post (optional)
+img: "workflow.jpg" # Add image post (optional)
 tags: [Programming, Learn] # add tag
 ---
 
