--- a/_posts/2020-05-05-마크다운 사용법 정리.markdown
+++ b/_posts/2020-05-05-마크다운 사용법 정리.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The Best Organizer Software
+title: 마크다운(Github.io에 작성하는 포스트 위주로..) 작성 방법 정리
 date: 2020-04-29 04:15:00 +0300
 description: 마크다운을 공부하다가 작성에 필요한 것들을 공부목적으로 작성한 포스팅입니다. # Add post description (optional)
 img: software.jpg # Add image post (optional)
